Use Double#valueOf / auto boxing
These changes remove some superfluous boxing/unboxing operations
and prepare for future JVM optimization similar to the Integer cache.